add docker in project
